@@ -1,3 +1,8 @@
+2012-02-08  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/52151
+	* gfortran.dg/realloc_on_assign_12.f90: New.
+
 2012-02-07  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.c-torture/execute/20120207-1.c: New test.
